@@ -23,6 +23,8 @@ import uk.gov.hmcts.reform.hmc.data.PanelRequirementsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
 import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.ListingStatus;
 import uk.gov.hmcts.reform.hmc.model.Attendee;
 import uk.gov.hmcts.reform.hmc.model.CaseCategory;
 import uk.gov.hmcts.reform.hmc.model.CaseCategoryType;
@@ -98,9 +100,9 @@ public class TestingUtil {
 
     public static PanelRequirements panelRequirements() {
         PanelRequirements panelRequirements = new PanelRequirements();
-        panelRequirements.setRoleType(Arrays.asList("RoleType1"));
-        panelRequirements.setAuthorisationTypes(Arrays.asList("AuthorisationType1"));
-        panelRequirements.setAuthorisationSubType(Arrays.asList("AuthorisationSubType2"));
+        panelRequirements.setRoleType(List.of("RoleType1"));
+        panelRequirements.setAuthorisationTypes(List.of("AuthorisationType1"));
+        panelRequirements.setAuthorisationSubType(List.of("AuthorisationSubType2"));
         return panelRequirements;
     }
 
@@ -184,15 +186,14 @@ public class TestingUtil {
         partyDetails2.setPartyType("IND");
         partyDetails2.setPartyRole("DEF2");
 
-        List<PartyDetails> partyDetails = Lists.newArrayList(partyDetails1, partyDetails2);
-        return partyDetails;
+        return Lists.newArrayList(partyDetails1, partyDetails2);
     }
 
     public static List<CaseCategoriesEntity> caseCategoriesEntities() {
         CaseCategoriesEntity caseCategoriesEntity = new CaseCategoriesEntity();
         caseCategoriesEntity.setCategoryType(CaseCategoryType.CASETYPE);
         caseCategoriesEntity.setCaseCategoryValue("PROBATE");
-        return Arrays.asList(caseCategoriesEntity);
+        return List.of(caseCategoriesEntity);
     }
 
     public static IndividualDetails individualDetails() {
@@ -348,7 +349,7 @@ public class TestingUtil {
         List<Attendee> attendeeList = new ArrayList<>();
         attendeeList.add(attendee);
         schedule.setAttendees(attendeeList);
-        caseHearing.setHearingDaySchedule(Arrays.asList(schedule));
+        caseHearing.setHearingDaySchedule(List.of(schedule));
         List<CaseHearing> caseHearingList = new ArrayList<>();
         caseHearingList.add(caseHearing);
         getHearingsResponse.setCaseHearings(caseHearingList);
@@ -369,9 +370,9 @@ public class TestingUtil {
         entity.setHmctsServiceCode("ABA1");
         entity.setCaseReference("12345");
         entity.setHearingType("Some hearing type");
-        entity.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntities()));
+        entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
         entity.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntities()));
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         return entity;
     }
 
@@ -387,7 +388,7 @@ public class TestingUtil {
     public static List<NonStandardDurationsEntity> getNonStandardDurationEntities() {
         NonStandardDurationsEntity nonStandardDurationsEntity = new NonStandardDurationsEntity();
         nonStandardDurationsEntity.setNonStandardHearingDurationReasonType("Reason");
-        return Arrays.asList(nonStandardDurationsEntity);
+        return List.of(nonStandardDurationsEntity);
     }
 
     public static List<CaseHearingRequestEntity> getCaseHearingsEntitiesWithStatus() {
@@ -407,9 +408,9 @@ public class TestingUtil {
         entity1.setHmctsServiceCode("ABA1");
         entity1.setCaseReference("12345");
         entity1.setHearingType("Some hearing type");
-        entity1.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntities()));
+        entity1.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
         entity1.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntities()));
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entities.add(entity1);
     }
 
@@ -423,9 +424,9 @@ public class TestingUtil {
         entity1.setHmctsServiceCode("ABA1");
         entity1.setCaseReference("4567");
         entity1.setHearingType("Some hearing type");
-        entity1.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntities()));
+        entity1.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
         entity1.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntities()));
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entities.add(entity1);
     }
 
@@ -436,6 +437,7 @@ public class TestingUtil {
         entity.setHearingResponseId(2L);
         entity.setListingStatus("listingStatus");
         entity.setListingCaseStatus("Case_listingStatus");
+        entity.setCancellationReasonType("Cancelled Reason 1");
         return entity;
     }
 
@@ -446,8 +448,8 @@ public class TestingUtil {
         entity.setVenueId("venue1");
         entity.setRoomId("room1");
         entity.setListAssistSessionId("session1");
-        entity.setHearingAttendeeDetails(Arrays.asList(hearingAttendeeDetailsEntity()));
-        entity.setHearingDayPanel(Arrays.asList(hearingDayPanelEntities()));
+        entity.setHearingAttendeeDetails(List.of(hearingAttendeeDetailsEntity()));
+        entity.setHearingDayPanel(List.of(hearingDayPanelEntities()));
         return entity;
     }
 
@@ -620,8 +622,9 @@ public class TestingUtil {
         entity.setRequestTimeStamp(LocalDateTime.parse("2020-08-10T12:20:00"));
         entity.setHearingResponseId(2L);
         entity.setRequestVersion(10);
-        entity.setListingStatus("listingStatus");
-        entity.setListingCaseStatus("Case_listingStatus");
+        entity.setListingStatus(ListingStatus.FIXED.name());
+        entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
+        entity.setCancellationReasonType("Cancelled Reason 1");
         entity.setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
         return entity;
     }
@@ -635,7 +638,7 @@ public class TestingUtil {
         entity.setVenueId("venueId");
 
         HearingAttendeeDetailsEntity attendee = new HearingAttendeeDetailsEntity();
-        entity.setHearingAttendeeDetails(Arrays.asList(attendee));
+        entity.setHearingAttendeeDetails(List.of(attendee));
         return entity;
     }
 
@@ -644,7 +647,7 @@ public class TestingUtil {
         entity.setPartyReference("reference");
         entity.setPartyType(PartyType.ORG);
         entity.setPartyRoleType("role");
-        entity.setUnavailabilityEntity(Arrays.asList(unavailabilityEntity()));
+        entity.setUnavailabilityEntity(List.of(unavailabilityEntity()));
         entity.setOrganisationDetailEntity(organisationDetailEntity());
 
         return entity;
@@ -655,8 +658,7 @@ public class TestingUtil {
         entity.setPartyReference("reference");
         entity.setPartyType(PartyType.IND);
         entity.setPartyRoleType("role");
-        entity.setIndividualDetailEntity(Arrays.asList(individualDetailEntity()));
-
+        entity.setIndividualDetailEntity(List.of(individualDetailEntity()));
         return entity;
     }
 
@@ -679,11 +681,10 @@ public class TestingUtil {
         entity1.setHmctsServiceCode("ABA1");
         entity1.setCaseReference("12345");
         entity1.setHearingType("Some hearing type");
-        entity1.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntities()));
+        entity1.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
         entity1.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntities()));
-        entity1.setHearingParties(Arrays.asList(hearingPartyEntityInd()));
-
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        entity1.setHearingParties(List.of(hearingPartyEntityInd()));
         return entity1;
     }
 
